ecto migration tasks (#105)
* ecto migration tasks

* fix dogma

* fix credo

* init db for Travis CI

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ DB_HOST=travis
 DB_PORT=5432
 
 # Seed and migrate DB on start
-APP_MIGRATE=true
+DB_MIGRATE=true
 
 # Phoenix endpoint settings
 PORT=4000
