--- a/.env
+++ b/.env
@@ -18,6 +18,13 @@ DB_PASSWORD=postgres
 DB_HOST=travis
 DB_PORT=5432
 
+# PRM database settings
+PRM_DB_NAME=prm
+PRM_DB_USER=postgres
+PRM_DB_PASSWORD=postgres
+PRM_DB_HOST=travis
+PRM_DB_PORT=5432
+
 # Seed and migrate DB on start
 DB_MIGRATE=true
 
