drop PRM api calls (#849)
* remove most of PRM get_employees api calls

* remove get_employees api call

* drop all employee prm api calls

* refactored legal_entity creation / updating

* drop party users prm api calls

* drop party users and parties prm api calls

* drop divisions prm api calls

* drop prm.ex

* add ecto trail to legal entities, divisions, employees

* cleanup obsolete code

* test docker

* add deactivate_employee_owners test

* respect msp token for legal entities list

* add missed alias

* fix approving employee_request with employee_id

* fix creating party users

* migrate prm migrations on deploy

* migrate prm migrations on deploy

* deactivate owners when deactivating legal_entity

* assign user role to new user

* search user roles by client_id on employee_request approve

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ DB_HOST=travis
 DB_PORT=5432
 
 # PRM database settings
-PRM_DB_NAME=prm
+PRM_DB_NAME=prm_dev
 PRM_DB_USER=postgres
 PRM_DB_PASSWORD=postgres
 PRM_DB_HOST=travis
