--- a/.travis.yml
+++ b/.travis.yml
@@ -39,15 +39,7 @@ before_install:
 script:
   # Increment version in mix.exs
   - ./bin/ci/version-increment.sh || travis_terminate 1
-  # Run all tests except pending ones
-  - mix test --exclude pending --trace
-  # Submit code coverage report to Coveralls
-  # Add --pro if you using private repo.
-  - mix coveralls.travis --exclude pending || travis_terminate 1
-  # Run static code analysis
-  - mix credo --strict || travis_terminate 1
-  # Check code style
-  - mix dogma || travis_terminate 1
+  - ./bin/mix_tests.sh || travis_terminate 1
   # Build Docker container
   - ./bin/build.sh || travis_terminate 1
   # Initialize DB for Docker container
