add fraud migrations to tasks (#1325)

--- a/.env
+++ b/.env
@@ -25,6 +25,13 @@ PRM_DB_PASSWORD=postgres
 PRM_DB_HOST=travis
 PRM_DB_PORT=5432
 
+# Fraud database settings
+FRAUD_DB_NAME=fraud_dev
+FRAUD_DB_USER=postgres
+FRAUD_DB_PASSWORD=postgres
+FRAUD_DB_HOST=travis
+FRAUD_DB_PORT=5432
+
 # Seed and migrate DB on start
 DB_MIGRATE=true
 DB_SEED=true
