--- a/.travis.yml
+++ b/.travis.yml
@@ -42,10 +42,12 @@ before_script:
   # Extract project name and version from mix.exs
   - source ./bin/ci/release/fetch-project-environment.sh
   # Load information about new version
-  - source ./bin/ci/release/fetch-source-version.sh || travis_terminate 1
+  - source ./bin/ci/release/fetch-source-version.sh
   # Load information about changelog
   - source ./bin/ci/release/fetch-changelog.sh
 script:
+  # Check for versioning error
+  - ./bin/ci/release/check-version-error.sh || travis_terminate 1
   # Increment version in mix.exs
   - ./bin/ci/release/put-source-version.sh || travis_terminate 1
   # Create release notes log for minor version
