--- a/.env
+++ b/.env
@@ -32,6 +32,13 @@ FRAUD_DB_PASSWORD=postgres
 FRAUD_DB_HOST=travis
 FRAUD_DB_PORT=5432
 
+# Event manager database settings
+EVENT_MANAGER_DB_NAME=event_manager_dev
+EVENT_MANAGER_DB_USER=postgres
+EVENT_MANAGER_DB_PASSWORD=postgres
+EVENT_MANAGER_DB_HOST=travis
+EVENT_MANAGER_DB_PORT=5432
+
 # Seed and migrate DB on start
 DB_MIGRATE=true
 DB_SEED=true
