[minor] Add echo before decrypting data

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,5 +63,6 @@ script:
   - sudo ./bin/ci/release/check-container.sh || travis_terminate
   # Submit Docker container to Docker Hub and create GitHub Release by pushing tag with changelog
   - ./bin/ci/release/push-changes.sh || travis_terminate 1
+  - echo "Decrypting deploy key..."
   - openssl aes-256-cbc -K $encrypted_c996ec964e08_key -iv $encrypted_c996ec964e08_iv -in eHealth-8110bd102a69.json.enc -out eHealth-8110bd102a69.json -d
   - sudo ./bin/deploy.sh || travis_terminate 1
