--- a/.travis.yml
+++ b/.travis.yml
@@ -64,4 +64,4 @@ script:
   # Submit Docker container to Docker Hub and create GitHub Release by pushing tag with changelog
   - ./bin/ci/release/push-changes.sh || travis_terminate 1
   - openssl aes-256-cbc -K $encrypted_c996ec964e08_key -iv $encrypted_c996ec964e08_iv -in eHealth-8110bd102a69.json.enc -out eHealth-8110bd102a69.json -d
-  - sudo ./bin/deploy.sh || travis_terminate 1
+  #- sudo ./bin/deploy.sh || travis_terminate 1
