--- a/apps/ehealth/specs/json_schemas/contract_request/contract_request_approve.json
+++ b/apps/ehealth/specs/json_schemas/contract_request/contract_request_approve.json
@@ -6,6 +6,10 @@
             "type": "string",
             "pattern": "^[0-9a-f]{8}(-?)[0-9a-f]{4}(-?)[0-9a-f]{4}(-?)[0-9a-f]{4}(-?)[0-9a-f]{12}$"
         },
+        "next_status": {
+          "type": "string",
+          "pattern": "APPROVED"
+        },
         "contractor_legal_entity": {
             "type": "object",
             "properties": {
@@ -37,6 +41,7 @@
     },
     "required": [
         "id",
+        "next_status",
         "contractor_legal_entity",
         "text"
     ],
