Add casher application (#2979)
* Add casher application

* Add casher application to travis.yml

* Add casher release

* Add redis workers pool

* Set release explicit release name

* Rename redis functions

* Rename redis flushdb

* Use setex signature in redis

--- a/.env
+++ b/.env
@@ -39,6 +39,9 @@ EVENT_MANAGER_DB_PASSWORD=postgres
 EVENT_MANAGER_DB_HOST=travis
 EVENT_MANAGER_DB_PORT=5432
 
+# Redis
+REDIS_URI=redis://travis:6379
+
 # Seed and migrate DB on start
 DB_MIGRATE=true
 DB_SEED=true
