EHealth-3113: create related legal entities (#3264)
* created admin app

* GraphQL init application

* add common deps to GraphQL application

* code format

* cleanup Graphql app

* add base schema and person types to Graphql app

* add missing mix.lock changes

* add aliases to business logic and resolver modules in GraphQL app

* add authorization middleware to GraphQL app (#3107)

* graphql tests for Legal Entity (#3178)

* GraphQL tests

* tests for LegalEntity - list with filter and get by id

*  add context plug to GraphQL app (#3180)

* use singular name for scope in context

* add context plug to GraphQL app

* move scope_header to module attribute and expose it via function

* add set_scope helper, set needed scope in legal entity resolver test

* add authorization middleware test

* add post_query helper

* refactor type definitions

* use post_query in authz_middleware_test

* refactor middleware

* add some module docs

* Relay node interface (#3191)

* add absinthe-relay dependency and define node interface

* refactor middleware/3 callback, add Absinthe.Relay.Node.ParseIDs middleware

* move middleware/3 callback into middleware modules

* add DatabaseIDs middleware

* add MapGet middleware (#3216)

* use proper module attributes ordering

* add MapGet middleware

* LegalEntity schema (#3188)

* LegalEntity schema

* LegalEntity paging

* embed string-key middleware, improved paging object

* refactored middlewares

* merged with middlewares, fixed map_get

* format

* change Notation use

* type and resolver for Job

* tech commit

* build container on travis

* prepare application for prod env

* added graphql app to release config

* try version 0.1.0

* added alias for ecto.setup mix task

* merge legal entities job

* exclude test for scope validation

* added Kafka consumer to GraphQL application

* missing_scopes -> missing_allowances

* group im

--- a/.env
+++ b/.env
@@ -39,8 +39,13 @@ EVENT_MANAGER_DB_PASSWORD=postgres
 EVENT_MANAGER_DB_HOST=travis
 EVENT_MANAGER_DB_PORT=5432
 
+MONGO_DB_URL=mongodb://travis:27017/taskafka
+
 # Redis
 REDIS_URI=redis://travis:6379
+
+# Kafka
+KAFKA_BROKERS_HOST=travis:9092
 
 # Seed and migrate DB on start
 DB_MIGRATE=true
