--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ jobs:
     - stage: "test and build"
       name: "Build Docker container for EHealth API"
       env:
-      - APPS='[{"app":"ehealth","chart":"il","namespace":"il","deployment":"il","label":"il"}]'
+      - APPS='[{"app":"ehealth","chart":"il","namespace":"il","deployment":"api","label":"il"}]'
       script:
       - openssl aes-256-cbc -K $encrypted_c996ec964e08_key -iv $encrypted_c996ec964e08_iv -in eHealth-8110bd102a69.json.enc -out eHealth-8110bd102a69.json -d
       - (curl -s https://raw.githubusercontent.com/edenlabllc/ci-utils/umbrella_v2/docker.sh -o docker.sh; bash ./docker.sh) || travis_terminate 1
