Add new dictionaries (medical events) (#3630)

--- a/.env
+++ b/.env
@@ -49,7 +49,7 @@ KAFKA_BROKERS_HOST=travis:9092
 
 # Seed and migrate DB on start
 DB_MIGRATE=true
-DB_SEED=true
+DB_SEED=false
 
 # Phoenix endpoint settings
 PORT=4000
