--- a/.env
+++ b/.env
@@ -25,6 +25,12 @@ DB_HOST=travis
 DB_PORT=5432
 
 # PRM database settings
+READ_PRM_DB_NAME=prm_dev
+READ_PRM_DB_USER=postgres
+READ_PRM_DB_PASSWORD=postgres
+READ_PRM_DB_HOST=travis
+READ_PRM_DB_PORT=5432
+
 PRM_DB_NAME=prm_dev
 PRM_DB_USER=postgres
 PRM_DB_PASSWORD=postgres
