feat: run BDD tests for GraphQL application (#4332)

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ jobs:
       script:
         - mongo --version
         - (curl -s https://raw.githubusercontent.com/edenlabllc/ci-utils/umbrella/tests.sh -o tests.sh; bash ./tests.sh) || travis_terminate 1
+        - cd apps/graphql && mix white_bread.run
+        - if [ "$?" -eq 0 ]; then echo "mix white_bread.run successfully completed" else echo "mix white_bread.run finished with errors, exited with 1" is_failed=1; fi;
 
     - stage: "test and build"
       name: "Build Docker container for EHealth API"
