feat: save sign content on employee request create process (#4859)
* feat: save sign content on employee request create process

* fix: add env var for CI

--- a/.env
+++ b/.env
@@ -56,6 +56,7 @@ MEDIA_STORAGE_DECLARATION_REQUEST_BUCKET=declaration-requests-dev
 MEDIA_STORAGE_DECLARATION_BUCKET=declarations-dev
 MEDIA_STORAGE_MEDICATION_REQUEST_REQUEST_BUCKET=medication-request-requests-dev
 MEDIA_STORAGE_PERSON_BUCKET=persons-dev
+MEDIA_STORAGE_EMPLOYEE_REQUEST_BUCKET=employee-requests-dev
 MEDIA_STORAGE_MEDICATION_DISPENSE_BUCKET=medication-dispenses-dev
 MEDIA_STORAGE_MEDICATION_REQUEST_BUCKET=medication-requests-dev
 MEDIA_STORAGE_RELATED_LEGAL_ENTITY_BUCKET=related-legal-entities-dev
